syntax = "proto3";
import "base.proto";

package cmt.protobuf;

// Create(Post)
service CreateAircraft {
    rpc CreateAircraft(CreateAircraftRequest) returns(AuthorizeDecision);
}

message CreateAircraftRequest {
    string tenantId = 1;
}

// Edit(Put) - showcases additional information from the request being factored into authorization.
service EditAircraft {
    rpc EditAircraft(EditAircraftRequest) returns(AuthorizeDecision);
}

message EditAircraftRequest {
    string tenantId = 1;
    bool isGrounded = 2;
}